--- a/biblio.bib
+++ b/biblio.bib
@@ -389,6 +389,16 @@
       Year = {1955} }
 
 
+@inproceedings{kim2003,
+   Author = {Kim, Jeong Han and Vu, Van H},
+   Title = {Generating random regular graphs},
+   BookTitle = {Proceedings of the thirty-fifth annual ACM symposium on Theory of computing},
+   Pages = {213-222},
+      Year = {2003} }
+
+
+
+
 
 
 
