Some comments from MZ/HR meeting

--- a/biblio.bib
+++ b/biblio.bib
@@ -397,6 +397,228 @@
       Year = {2003} }
 
 
+@inproceedings{korbak2023,
+   Author = {Korbak, Tomasz and Shi, Kejian and Chen, Angelica and Bhalerao, Rasika Vinayak and Buckley, Christopher and Phang, Jason and Bowman, Samuel R and Perez, Ethan},
+   Title = {Pretraining language models with human preferences},
+   BookTitle = {International Conference on Machine Learning},
+   Publisher = {PMLR},
+   Pages = {17506-17533},
+      Year = {2023} }
+
+
+
+@article{furnkranz2012,
+   Author = {Fürnkranz, Johannes and Hüllermeier, Eyke and Cheng, Weiwei and Park, Sang-Hyeun},
+   Title = {Preference-based reinforcement learning: a formal framework and a policy iteration algorithm},
+   Journal = {Machine learning},
+   Volume = {89},
+   Pages = {123-156},
+      Year = {2012} }
+
+
+@inproceedings{natarajan2005,
+   Author = {Natarajan, Sriraam and Tadepalli, Prasad},
+   Title = {Dynamic preferences in multi-criteria reinforcement learning},
+   BookTitle = {Proceedings of the 22nd international conference on Machine learning},
+   Pages = {601-608},
+      Year = {2005} }
+
+
+@book{osborne1994,
+   Author = {Osborne, Martin J and Rubinstein, Ariel},
+   Title = {A course in game theory},
+   Publisher = {MIT press},
+      Year = {1994} }
+
+@book{munger2015,
+   Author = {Munger, Michael C},
+   Title = {Choosing in groups: Analytical politics revisited},
+   Publisher = {Cambridge University Press},
+      Year = {2015} }
+
+
+@article{riess2023,
+   Author = {Riess, Hans and Munger, Michael and Zavlanos, Michael M},
+   Title = {Max-Plus Synchronization in Decentralized Trading Systems},
+   Journal = {arXiv preprint arXiv:2304.00210},
+      Year = {2023} }
+
+
+@article{jeanpierre1986,
+   Author = {Jean-Pierre, Barthélemy and Bruno, Leclerc and Bernard, Monjardet},
+   Title = {On the use of ordered sets in problems of comparison and consensus of classifications},
+   Journal = {Journal of Classification},
+      Year = {1986} }
+
+@article{leclerc1984,
+   Author = {Leclerc, Bruno},
+   Title = {Efficient and binary consensus functions on transitively valued relations},
+   Journal = {Mathematical Social Sciences},
+      Year = {1984} }
+
+
+@article{lecrerc1993,
+   Author = {Leclerc, Bruno},
+   Title = {Lattice valuations, medians and majorities},
+   Journal = {Discrete Mathematics},
+   Volume = {111},
+   Number = {1},
+   Pages = {345-356},
+      Year = {1993} }
+
+@article{leclerc1990,
+   Author = {Leclerc, Bruno},
+   Title = {Medians and majorities in semimodular lattices},
+   Journal = {SIAM Journal on Discrete Mathematics},
+   Volume = {3},
+   Number = {2},
+   Pages = {266-276},
+      Year = {1990} }
+
+@article{monjardet2004,
+   Author = {Monjardet, B. and Raderanirina, V.},
+   Title = {Lattices of social choice functions and consensus problems},
+   Journal = {Social Choice and Welfare},
+   Volume = {23},
+   Number = {3},
+   Pages = {349-382},
+      Year = {2004} }
+
+@article{monjardet1990,
+   Author = {Bernard, Monjardet},
+   Title = {Arrowian characterizations of latticial federation consensus functions},
+   Journal = {Mathematical Social Sciences},
+      Year = {1990} }
+
+
+@article{caspard2003,
+   Author = {Caspard, Nathalie and Monjardet, Bernard},
+   Title = {The lattices of closure systems, closure operators, and implicational systems on a finite set: a survey},
+   Journal = {Discrete Applied Mathematics},
+   Volume = {127},
+   Number = {2},
+   Pages = {241-269},
+      Year = {2003} }
+
+
+@article{monjardet1981,
+   Author = {Monjardet, Bernard},
+   Title = {Metrics on partially ordered sets—a survey},
+   Journal = {Discrete mathematics},
+   Volume = {35},
+   Number = {1-3},
+   Pages = {173-184},
+      Year = {1981} }
+
+
+@article{barthelemy1991,
+   Author = {Barthélemy, Jean-Pierre and Janowitz, Melvin F.},
+   Title = {A formal theory of consensus},
+   Journal = {SIAM Journal on Discrete Mathematics},
+   Volume = {4},
+   Number = {3},
+   Pages = {305-322},
+      Year = {1991} }
+
+@article{brown1975,
+   Author = {J. Brown, Donald},
+   Title = {Aggregation of Preferences},
+   Journal = {Quarterly Journal of Economics},
+      Year = {1975} }
+
+
+@article{karacal2017,
+   Author = {Karacal, Funda and Mesiar, Radko},
+   Title = {Aggregation functions on bounded lattices},
+   Journal = {International Journal of General Systems},
+   Volume = {46},
+   Number = {1},
+   Pages = {37-51},
+      Year = {2017} }
+
+@article{greaves2017,
+   Author = {Greaves, Hilary and Lederman, Harvey},
+   Title = {Aggregating extended preferences},
+   Journal = {Philosophical Studies},
+   Volume = {174},
+   Number = {5},
+   Pages = {1163-1190},
+      Year = {2017} }
+
+
+@article{savaglio2019,
+   Author = {Savaglio, Ernesto and Vannucci, Stefano},
+   Title = {Strategy-proof aggregation rules and single peakedness in bounded distributive lattices},
+   Journal = {Social Choice and Welfare},
+   Volume = {52},
+   Number = {2},
+   Pages = {295-327},
+      Year = {2019} }
+
+@article{chambers2011,
+   Author = {Chambers, Christopher P and Miller, Alan D},
+   Title = {Rules for aggregating information},
+   Journal = {Social Choice and Welfare},
+   Volume = {36},
+   Number = {1},
+   Pages = {75-82},
+      Year = {2011} }
+
+
+@article{attiya1995,
+   Author = {Attiya, Hagit and Herlihy, Maurice and Rachman, Ophir},
+   Title = {Atomic snapshots using lattice agreement},
+   Journal = {Distributed Computing},
+   Volume = {8},
+   Pages = {121-132},
+      Year = {1995} }
+
+@article{noorazar2020,
+   Author = {Noorazar, Hossein},
+   Title = {Recent advances in opinion propagation dynamics: A 2020 survey},
+   Journal = {The European Physical Journal Plus},
+   Volume = {135},
+   Pages = {1-20},
+      Year = {2020} }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
